work a bit on cell motility

--- a/library.bib
+++ b/library.bib
@@ -215,6 +215,24 @@ DOI: [http://dx.doi.org/10.7554/eLife.01433.002][1]
  year = {2008},
 }
 
+@article{Buss2008b,
+ abstract = {This review, dedicated to the memory of Professor Setsuro Ebashi, focuses on our current work investigating the cellular functions and regulation of the unique unconventional motor, myosin VI. This myosin, unlike all the other myosins so far studied, moves towards the minus end of actin filaments and has been implicated in a wide range of cellular processes such as endocytosis, exocytosis, cell migration, cell division and cytokinesis. Myosin VI's involvement in these cellular pathways is mediated by its interaction with specific adaptor proteins and is regulated by multiple regulatory signals and modifications such as calcium ions, PtdIns(4,5)P(2) (PIP(2)) and phosphorylation. Understanding the functions of myosin VI within the cell and how it is regulated is now of utmost importance given the recent observations that it is associated with a number of human disorders such as deafness and cancers.},
+ annote = {Myosin Vi walk toward minus end},
+ author = {Buss, Folma and Kendrick-Jones, John},
+ doi = {10.1016/j.bbrc.2007.11.150},
+ issn = {1090-2104},
+ journal = {Biochemical and biophysical research communications},
+ keyword = {Cell Physiological Phenomena,Feedback,Feedback: physiology,Models, Biological,Molecular Motor Proteins,Molecular Motor Proteins: physiology,Myosin Heavy Chains,Myosin Heavy Chains: physiology,Protein Transport,Protein Transport: physiology},
+ link = {http://www.pubmedcentral.nih.gov/articlerender.fcgi?artid=2635068\&tool=pmcentrez\&rendertype=abstract},
+ month = {apr},
+ number = {1},
+ pages = {165--75},
+ pmid = {18068125},
+ title = {How are the cellular functions of myosin VI regulated within the cell?},
+ volume = {369},
+ year = {2008},
+}
+
 @article{Cameron2001,
  abstract = {Polymerization of actin filaments is necessary for both protrusion of the leading edge of crawling cells and propulsion of certain intracellular pathogens, and it is sufficient for generating force for bacterial motility in vitro. Motile intracellular pathogens are associated with actin-rich comet tails containing many of the same molecular components present in lamellipodia, and this suggests that these two systems use a similar mechanism for motility. However, available structural evidence suggests that the organization of comet tails differs from that of lamellipodia. Actin filaments in lamellipodia form branched arrays, which are thought to arise by dendritic nucleation mediated by the Arp2/3 complex. In contrast, comet tails have been variously described as consisting of short, randomly oriented filaments, with a higher degree of alignment at the periphery, or as containing long, straight axial filaments with a small number of oblique filaments. Because the assembly of pathogen-associated comet tails has been used as a model system for lamellipodial protrusion, it is important to resolve this apparent discrepancy. Here, using a platinum replica approach, we show that actin filament arrays in comet tails in fact have a dendritic organization with the Arp2/3 complex localizing to Y-junctions as in lamellipodia. Thus, comet tails and lamellipodia appear to share a common dendritic nucleation mechanism for protrusive motility. However, comet tails differ from lamellipodia in that their actin filaments are usually twisted and appear to be under significant torsional stress.},
  author = {Cameron, Lisa A. and Svitkina, Tatyana M. and Vignjevic, Danijela and Theriot, Julie A. and Borisy, Gary G.},
@@ -976,6 +994,25 @@ DOI: [http://dx.doi.org/10.7554/eLife.01433.002][1]
  year = {2011},
 }
 
+@article{Mehta1999,
+ abstract = {Class-V myosins, one of 15 known classes of actin-based molecular motors, have been implicated in several forms of organelle transport, perhaps working with microtubule-based motors such as kinesin. Such movements may require a motor with mechanochemical properties distinct from those of myosin-II, which operates in large ensembles to drive high-speed motility as in muscle contraction. Based on its function and biochemistry, it has been suggested that myosin-V may be a processive motor like kinesin. Processivity means that the motor undergoes multiple catalytic cycles and coupled mechanical advances for each diffusional encounter with its track. This allows single motors to support movement of an organelle along its track. Here we provide direct evidence that myosin-V is indeed a processive actin-based motor that can move in large steps approximating the 36-nm pseudo-repeat of the actin filament.},
+ author = {Mehta, A D and Rock, R S and Rief, M and Spudich, J A and Mooseker, M S and Cheney, R E},
+ doi = {10.1038/23072},
+ issn = {0028-0836},
+ journal = {Nature},
+ keyword = {Actins,Actins: physiology,Adenosine Triphosphate,Adenosine Triphosphate: metabolism,Animals,Calmodulin-Binding Proteins,Calmodulin-Binding Proteins: physiology,Catalysis,Chickens,Molecular Motor Proteins,Molecular Motor Proteins: physiology,Movement,Myosin Light Chains,Myosin Light Chains: physiology,Myosin Type V,Nerve Tissue Proteins,Nerve Tissue Proteins: physiology,Optics and Photonics},
+ language = {en},
+ link = {http://www.nature.com.rproxy.sc.univ-paris-diderot.fr/nature/journal/v400/n6744/full/400590a0.html},
+ month = {aug},
+ number = {6744},
+ pages = {590--3},
+ pmid = {10448864},
+ publisher = {Nature Publishing Group},
+ title = {Myosin-V is a processive actin-based motor.},
+ volume = {400},
+ year = {1999},
+}
+
 @article{Mitrossilis2010,
  abstract = {Living cells adapt to the stiffness of their environment. However, cell response to stiffness is mainly thought to be initiated by the deformation of adhesion complexes under applied force. In order to determine whether cell response was triggered by stiffness or force, we have developed a unique method allowing us to tune, in real time, the effective stiffness experienced by a single living cell in a uniaxial traction geometry. In these conditions, the rate of traction force buildup dF/dt was adapted to stiffness in less than 0.1 s. This integrated fast response was unambiguously triggered by stiffness, and not by force. It suggests that early cell response could be mechanical in nature. In fact, local force-dependent signaling through adhesion complexes could be triggered and coordinated by the instantaneous cell-scale adaptation of dF/dt to stiffness. Remarkably, the effective stiffness method presented here can be implemented on any mechanical setup. Thus, beyond single-cell mechanosensing, this method should be useful to determine the role of rigidity in many fundamental phenomena such as morphogenesis and development.},
  author = {Mitrossilis, D\'{e}mosth\`{e}ne and Fouchard, Jonathan and Pereira, David and Postic, Fran\c{c}ois and Richert, Alain and Saint-Jean, Michel and Asnacios, Atef},
@@ -1069,6 +1106,17 @@ DOI: [http://dx.doi.org/10.7554/eLife.01433.002][1]
  pmid = {23213249},
  title = {F-actin buckling coordinates contractility and severing in a biomimetic actomyosin cortex.},
  volume = {109},
+ year = {2012},
+}
+
+@article{Noguera2012,
+ abstract = {Nous \'{e}tudions dans cette th\`{e}se l'influence de la prot\'{e}ine VASP sur la dynamique et les propri\'{e}t\'{e}s m\'{e}caniques des r\'{e}seaux d'actine \`{a} l'origine de la motilit\'{e} cellulaire. Dans une premi\`{e}re partie, nous utilisons un syst\`{e}me biomim\'{e}tique du mouvement constitu\'{e} de billes. Incub\'{e}es dans un m\'{e}lange minimal de prot\'{e}ines soutenant la polym\'{e}risation, ces billes forment un r\'{e}seau d'actine appel\'{e} ' com\`{e}te ' les propulsant vers l'avant, semblable \`{a} celui qui sous-tend la membrane du front de migration des cellules en mouvement. Grace \`{a} des formes mutantes de VASP, nous explorons la contribution \`{a} son activit\'{e} des domaines qui la composent. Dans nos conditions, nous montrons \'{e}galement que VASP agit au travers d'un m\'{e}canisme de coop\'{e}ration avec le complexe Arp2/3 qui est \`{a} l'origine de la formation des r\'{e}seaux d'actine. Enfin, nous \'{e}tudions les modalit\'{e}s de recrutement de VASP par les activateurs de la famille WASP/WAVE en mutant les sites potentiels de recrutement de VASP. Dans une seconde partie, nous nous int\'{e}ressons, en collaboration avec deux \'{e}quipes de recherche, au r\^{o}le de VASP dans la m\'{e}canique des r\'{e}seaux d'actine. Nous caract\'{e}risons en rh\'{e}ologie coupl\'{e}e \`{a} des observations en microcopie confocale les m\'{e}canismes mol\'{e}culaires de VASP dans la r\'{e}organisation de l'architecture des r\'{e}seaux d'actine, en lien avec leurs propri\'{e}t\'{e}s m\'{e}caniques, puis, nous \'{e}tudions en AFM par nano indentation l'augmentation de rigidit\'{e} des r\'{e}seaux d'actine form\'{e}s en pr\'{e}sence de VASP.},
+ author = {Noguera, Philippe},
+ file = {:Users/matthiasbussonnier/Documents/Mendeley Desktop/Noguera/Noguera - 2012 - Unknown - Etude du r\^{o}le de la prot\'{e}ine VASP dans la dynamique et la m\'{e}canique des r\'{e}seaux d'actine avec un syst\`{e}.pdf:pdf},
+ keyword = {VASP,actine,biomim\'{e}tisme,cytosquelette,motilit\'{e},\'{e}lasticit\'{e}},
+ link = {http://tel.archives-ouvertes.fr/tel-00834288},
+ month = {sep},
+ title = {Etude du r\^{o}le de la prot\'{e}ine VASP dans la dynamique et la m\'{e}canique des r\'{e}seaux d'actine avec un syst\`{e}me biomim\'{e}tique de la motilit\'{e} cellulaire},
  year = {2012},
 }
 
@@ -1696,6 +1744,21 @@ DOI: [http://dx.doi.org/10.7554/eLife.01433.002][1]
  title = {Calibrating bead displacements in optical tweezers using acousto-optic deflectors},
  volume = {77},
  year = {2006},
+}
+
+@article{Vilfan2014,
+ author = {Vilfan, Andrej},
+ doi = {10.1073/pnas.1322194111},
+ issn = {1091-6490},
+ journal = {Proceedings of the National Academy of Sciences of the United States of America},
+ link = {http://www.pnas.org/content/111/20/E2076.short?rss=1},
+ month = {may},
+ number = {20},
+ pages = {E2076},
+ pmid = {24757052},
+ title = {Myosin directionality results from coupling between ATP hydrolysis, lever motion, and actin binding.},
+ volume = {111},
+ year = {2014},
 }
 
 @article{VonDassow1994,
