--- a/library.bib
+++ b/library.bib
@@ -561,6 +561,7 @@ DOI: [http://dx.doi.org/10.7554/eLife.01433.002][1]
 @article{Gardel2003,
  abstract = {We measure the viscoelasticity of entangled F-actin over length scales between 1 and 100 microm using one- and two-particle microrheology, and directly identify two distinct microscopic contributions to the elasticity. Filament entanglements lead to a frequency-independent elastic modulus over an extended frequency range of 0.01-30 rad/sec; this is probed with one-particle microrheology. Longitudinal fluctuations of the filaments increase the elastic modulus between 0.1 and 30 rad/sec at length scales up to the filament persistence length; this is probed by two-particle microrheology.},
  author = {Gardel, M L and Valentine, M T and Crocker, J C and Bausch, A R and Weitz, D A},
+ file = {:Users/matthiasbussonnier/Documents/Mendeley Desktop/Gardel et al/Gardel et al. - 2003 - Physical review letters - Microrheology of entangled F-actin solutions.pdf:pdf},
  issn = {0031-9007},
  journal = {Physical review letters},
  keyword = {Actin Cytoskeleton,Actin Cytoskeleton: chemistry,Actins,Actins: chemistry,Elasticity,Rheology,Rheology: methods,Solutions,Viscosity},
@@ -578,7 +579,7 @@ DOI: [http://dx.doi.org/10.7554/eLife.01433.002][1]
  abstract = {We measure the viscoelasticity of entangled F-actin over length scales between 1 and 100 $\mu$m using one- and two-particle microrheology, and directly identify two distinct microscopic contributions to the elasticity. Filament entanglements lead to a frequency-independent elastic modulus over an extended frequency range of 0.01–30 rad/sec⁡; this is probed with one-particle microrheology. Longitudinal fluctuations of the filaments increase the elastic modulus between 0.1 and 30 rad/sec⁡ at length scales up to the filament persistence length; this is probed by two-particle microrheology.},
  author = {Gardel, M. and Valentine, M. and Crocker, J. and Bausch, A. and Weitz, D.},
  doi = {10.1103/PhysRevLett.91.158302},
- file = {:Users/matthiasbussonnier/Documents/Mendeley Desktop/Gardel et al/Gardel et al. - 2003 - Physical Review Letters - Microrheology of Entangled F-Actin Solutions.pdf:pdf},
+ file = {:Users/matthiasbussonnier/Documents/Mendeley Desktop/Gardel et al/Gardel et al. - 2003 - Physical review letters - Microrheology of entangled F-actin solutions.pdf:pdf},
  issn = {0031-9007},
  journal = {Physical Review Letters},
  link = {http://link.aps.org/doi/10.1103/PhysRevLett.91.158302},
@@ -1568,6 +1569,20 @@ DOI: [http://dx.doi.org/10.7554/eLife.01433.002][1]
  title = {Resolution doubling in fluorescence microscopy with confocal spinning-disk image scanning microscopy.},
  volume = {110},
  year = {2013},
+}
+
+@article{Semmrich2008,
+ abstract = {Using a variety of different rheological approaches, we study the nonlinear shear response of purified entangled F-actin solutions. We show that the choice of the experimental protocol is crucial. Furthermore, a transition between stress hardening and weakening can be induced even in purely entangled solutions. This transition depends on various ambient and network parameters including temperature, buffer salt concentration, filament length and density.},
+ author = {Semmrich, Christine and Larsen, Ryan J. and Bausch, Andreas R.},
+ doi = {10.1039/b800989a},
+ issn = {1744-683X},
+ journal = {Soft Matter},
+ link = {http://xlink.rsc.org/?DOI=b800989a},
+ number = {8},
+ pages = {1675},
+ title = {Nonlinear mechanics of entangled F-actin solutions},
+ volume = {4},
+ year = {2008},
 }
 
 @article{Smith2013,
