commit before starting on monday morning

--- a/library.bib
+++ b/library.bib
@@ -676,6 +676,19 @@ DOI: [http://dx.doi.org/10.7554/eLife.01433.002][1]
  year = {2013},
 }
 
+@article{Helfrich,
+ author = {Helfrich, W},
+ issn = {0341-0471},
+ journal = {Zeitschrift f\"{u}r Naturforschung. Teil C: Biochemie, Biophysik, Biologie, Virologie},
+ keyword = {Artificial,Elasticity,Lipids,Magnetics,Mathematics,Membranes},
+ link = {http://www.ncbi.nlm.nih.gov/pubmed/4273690},
+ number = {11},
+ pages = {693--703},
+ pmid = {4273690},
+ title = {Elastic properties of lipid bilayers: theory and possible experiments.},
+ volume = {28},
+}
+
 @article{Hinczewski2013,
  abstract = {The molecular motor myosin V (MyoV) exhibits a wide repertoire of pathways during the stepping process, which is intimately connected to its biological function. The best understood of these is the hand-over-hand stepping by a swinging lever arm movement toward the plus end of actin filaments. Single-molecule experiments have also shown that the motor "foot stomps," with one hand detaching and rebinding to the same site, and back-steps under sufficient load. The complete taxonomy of MyoV's load-dependent stepping pathways, and the extent to which these are constrained by motor structure and mechanochemistry, are not understood. Using a polymer model, we develop an analytical theory to describe the minimal physical properties that govern motor dynamics. We solve the first-passage problem of the head reaching the target-binding site, investigating the competing effects of backward load, strain in the leading head biasing the diffusion in the direction of the target, and the possibility of preferential binding to the forward site due to the recovery stroke. The theory reproduces a variety of experimental data, including the power stroke and slow diffusive search regimes in the mean trajectory of the detached head, and the force dependence of the forward-to-backward step ratio, run length, and velocity. We derive a stall force formula, determined by lever arm compliance and chemical cycle rates. By exploring the MyoV design space, we predict that it is a robust motor whose dynamical behavior is not compromised by reasonable perturbations to the reaction cycle and changes in the architecture of the lever arm.},
  author = {Hinczewski, Michael and Tehver, Riina and Thirumalai, D},
@@ -813,6 +826,20 @@ DOI: [http://dx.doi.org/10.7554/eLife.01433.002][1]
  title = {Dynamics and Rheology of Actin Solutions},
  volume = {29},
  year = {1996},
+}
+
+@book{Israelachvili2011,
+ abstract = {This chapter elaborates the differences between intermolecular, interparticle, and intersurface forces. Properties of solids and liquids are determined mainly by the molecular binding force or the strength of the interactions. The long-range nature of the interactions, such as the exact distance dependence of the force laws plays only a minor role. This chapter investigates in detail the interactions between spheres and particles whose radii are much larger than interatomic spacings. The chapter lists the most common forces encountered between macroscopic particles and extended surfaces interacting in liquids. It also summarizes the special features of different interactions. The chapter illustrates some commonly occurring intermolecular and intersurface potential functions and the different effects they can have on molecule–molecule and particle–particle interactions. The chapter relates the pair potentials between small molecules to those between molecules and surfaces, and between large particles of different geometries. The chapter also explains in detail the concepts related to size effects on interparticle interaction potentials, surface-area-to-volume scaling effects, and dynamic and nonequilibrium effects.},
+ author = {Israelachvili, Jacob N.},
+ booktitle = {Intermolecular and Surface Forces},
+ doi = {10.1016/B978-0-12-375182-9.10011-9},
+ isbn = {9780123751829},
+ issn = {01237518},
+ link = {http://www.sciencedirect.com/science/article/pii/B9780123751829100119},
+ pages = {205--222},
+ pmid = {4853515},
+ title = {Intermolecular and Surface Forces},
+ year = {2011},
 }
 
 @article{Iwabuchi2010,
@@ -1052,47 +1079,12 @@ DOI: [http://dx.doi.org/10.7554/eLife.01433.002][1]
  abstract = {Differential cell adhesion and cortex tension are thought to drive cell sorting by controlling cell-cell contact formation. Here, we show that cell adhesion and cortex tension have different mechanical functions in controlling progenitor cell-cell contact formation and sorting during zebrafish gastrulation. Cortex tension controls cell-cell contact expansion by modulating interfacial tension at the contact. By contrast, adhesion has little direct function in contact expansion, but instead is needed to mechanically couple the cortices of adhering cells at their contacts, allowing cortex tension to control contact expansion. The coupling function of adhesion is mediated by E-cadherin and limited by the mechanical anchoring of E-cadherin to the cortex. Thus, cell adhesion provides the mechanical scaffold for cell cortex tension to drive cell sorting during gastrulation.},
  author = {Ma\^{\i}tre, Jean-L\'{e}on and Berthoumieux, H\'{e}l\`{e}ne and Krens, Simon Frederik Gabriel and Salbreux, Guillaume and J\"{u}licher, Frank and Paluch, Ewa and Heisenberg, Carl-Philipp},
  doi = {10.1126/science.1225399},
- issn = {1095-9203},
- journal = {Science (New York, N.Y.)},
- keyword = {Animals,Cadherins,Cadherins: metabolism,Cadherins: physiology,Cell Adhesion,Cell Communication,Cell Shape,Cytoskeleton,Cytoskeleton: physiology,Ectoderm,Ectoderm: cytology,Gastrulation,Stem Cells,Stem Cells: cytology,Stem Cells: physiology,Surface Tension,Zebrafish,Zebrafish: embryology},
- link = {http://www.ncbi.nlm.nih.gov/pubmed/22923438},
- month = {oct},
- number = {6104},
- pages = {253--6},
- pmid = {22923438},
- title = {Adhesion functions in cell sorting by mechanically coupling the cortices of adhering cells.},
- volume = {338},
- year = {2012},
-}
-
-@article{Maitre2012a,
- abstract = {Differential cell adhesion and cortex tension are thought to drive cell sorting by controlling cell-cell contact formation. Here, we show that cell adhesion and cortex tension have different mechanical functions in controlling progenitor cell-cell contact formation and sorting during zebrafish gastrulation. Cortex tension controls cell-cell contact expansion by modulating interfacial tension at the contact. By contrast, adhesion has little direct function in contact expansion, but instead is needed to mechanically couple the cortices of adhering cells at their contacts, allowing cortex tension to control contact expansion. The coupling function of adhesion is mediated by E-cadherin and limited by the mechanical anchoring of E-cadherin to the cortex. Thus, cell adhesion provides the mechanical scaffold for cell cortex tension to drive cell sorting during gastrulation.},
- author = {Ma\^{\i}tre, Jean-L\'{e}on and Berthoumieux, H\'{e}l\`{e}ne and Krens, Simon Frederik Gabriel and Salbreux, Guillaume and J\"{u}licher, Frank and Paluch, Ewa and Heisenberg, Carl-Philipp},
- doi = {10.1126/science.1225399},
- file = {:Users/matthiasbussonnier/Documents/Mendeley Desktop/Ma\^{\i}tre et al/Ma\^{\i}tre et al. - 2012 - Science (New York, N.Y.) - Adhesion functions in cell sorting by mechanically coupling the cortices of adhering.html:html},
+ file = {:Users/matthiasbussonnier/Documents/Mendeley Desktop/Ma\^{\i}tre et al/Ma\^{\i}tre et al. - 2012 - Science (New York, N.Y.) - Adhesion functions in cell sorting by mechanically coupling the cortices of adhering.pdf:pdf;:Users/matthiasbussonnier/Documents/Mendeley Desktop/Ma\^{\i}tre et al/Ma\^{\i}tre et al. - 2012 - Science (New York, N.Y.) - Adhesion functions in cell sorting by mechanically coupling the cortices of adhering.html:html},
  issn = {1095-9203},
  journal = {Science (New York, N.Y.)},
  keyword = {Animals,Cadherins,Cadherins: metabolism,Cadherins: physiology,Cell Adhesion,Cell Communication,Cell Shape,Cytoskeleton,Cytoskeleton: physiology,Ectoderm,Ectoderm: cytology,Gastrulation,Stem Cells,Stem Cells: cytology,Stem Cells: physiology,Surface Tension,Zebrafish,Zebrafish: embryology},
  language = {en},
- link = {http://www.sciencemag.org/content/338/6104/253 http://www.ncbi.nlm.nih.gov/pubmed/22923438 http://www.sciencemag.org/content/338/6104/253.abstract},
- month = {oct},
- number = {6104},
- pages = {253--6},
- pmid = {22923438},
- title = {Adhesion functions in cell sorting by mechanically coupling the cortices of adhering cells.},
- volume = {338},
- year = {2012},
-}
-
-@article{Maitre2012b,
- abstract = {Differential cell adhesion and cortex tension are thought to drive cell sorting by controlling cell-cell contact formation. Here, we show that cell adhesion and cortex tension have different mechanical functions in controlling progenitor cell-cell contact formation and sorting during zebrafish gastrulation. Cortex tension controls cell-cell contact expansion by modulating interfacial tension at the contact. By contrast, adhesion has little direct function in contact expansion, but instead is needed to mechanically couple the cortices of adhering cells at their contacts, allowing cortex tension to control contact expansion. The coupling function of adhesion is mediated by E-cadherin and limited by the mechanical anchoring of E-cadherin to the cortex. Thus, cell adhesion provides the mechanical scaffold for cell cortex tension to drive cell sorting during gastrulation.},
- author = {Ma\^{\i}tre, Jean-L\'{e}on and Berthoumieux, H\'{e}l\`{e}ne and Krens, Simon Frederik Gabriel and Salbreux, Guillaume and J\"{u}licher, Frank and Paluch, Ewa and Heisenberg, Carl-Philipp},
- doi = {10.1126/science.1225399},
- file = {:Users/matthiasbussonnier/Documents/Mendeley Desktop/Ma\^{\i}tre et al/Ma\^{\i}tre et al. - 2012 - Science (New York, N.Y.) - Adhesion functions in cell sorting by mechanically coupling the cortices of adhering.pdf:pdf},
- issn = {1095-9203},
- journal = {Science (New York, N.Y.)},
- keyword = {Animals,Cadherins,Cadherins: metabolism,Cadherins: physiology,Cell Adhesion,Cell Communication,Cell Shape,Cytoskeleton,Cytoskeleton: physiology,Ectoderm,Ectoderm: cytology,Gastrulation,Stem Cells,Stem Cells: cytology,Stem Cells: physiology,Surface Tension,Zebrafish,Zebrafish: embryology},
- link = {http://www.sciencemag.org.rproxy.sc.univ-paris-diderot.fr/content/338/6104/253.long},
+ link = {http://www.sciencemag.org.rproxy.sc.univ-paris-diderot.fr/content/338/6104/253.long http://www.ncbi.nlm.nih.gov/pubmed/22923438 http://www.sciencemag.org/content/338/6104/253 http://www.sciencemag.org/content/338/6104/253.abstract},
  month = {oct},
  number = {6104},
  pages = {253--6},
