first end of chapter 1

--- a/library.bib
+++ b/library.bib
@@ -38,6 +38,20 @@ DOI: [http://dx.doi.org/10.7554/eLife.01433.002][1]
  year = {2010},
 }
 
+@book{Alberts2008,
+ abstract = {For nearly a quarter century Molecular Biology of the Cell has been the leading cell biology textbook. This tradition continues with the new Fifth Edition, which has been completely revised and updated to describe our current, rapidly advancing understanding of cell biology. To list but a few examples, a large amount of new material is presented on epigenetics; stem cells; RNAi; comparative genomics; the latest cancer therapies; apoptosis (now its own separate chapter); and cell cycle control and the mechanics of M phase (now integrated into one chapter). The hallmark features of Molecular Biology of the Cell have been retained, such as its consistent and comprehensive art program, clear concept headings, and succinct section summaries. Additionally, in response to extensive feedback from readers, the Fifth Edition now includes several new features. It is now more portable. Chapters 1-20 are printed and Chapters 21-25, covering multicellular systems, are provided as pdf files on the free Media DVD-ROM which accompanies the book. And for the first time, Molecular Biology of the Cell now contains end-of-chapter questions. These problems, written by John Wilson and Tim Hunt, emphasize a quantitative approach and the art of reasoning from experiments, and -they will help students review and extend their knowledge derived from reading the textbook. The Media DVD-ROM, which is packaged with every copy of the book, contains PowerPoint presentations with all of the figures, tables and micrographs from the text (available as JPEGs too). Also included is the Media Player, which plays over 125 moviesanimations, videos, and molecular modelsall with voiceover narration. A new reader-friendly feature is the integration of media codes throughout the text that link directly to relevant videos and animations. The Media DVD-ROM holds the multicellular systems chapters (21-25) of the text as well. By skillfully extracting the fundamental concepts from this enormous and ever-growing field, the authors tell the story of cell biology, and thereby create a coherent framework through which readers may approach and enjoy this subject that is so central to all of biology. There is also a reference edition of Molecular Biology of the Cell, Fifth Edition (ISBN 978-0-8153-4111-6) that contains Chapters 1-25 entirely in printed format.},
+ author = {Alberts, B and Johnson, A and Lewis, J and Raff, M and Roberts, K and {And Walter}, P},
+ booktitle = {Amino Acids},
+ editor = {Garland},
+ isbn = {0815341067},
+ link = {http://discovery.ucl.ac.uk/109973/},
+ pages = {1725},
+ publisher = {Garland},
+ title = {Molecular Biology of the Cell},
+ volume = {54},
+ year = {2008},
+}
+
 @article{Almonacid2010,
  abstract = {A critical and irreversible step in the cell division cycle is cytokinesis which physically separates the two daughter cells. This event is consequently subject to tight spatial and temporal regulation. This review focuses on the spatial regulatory mechanisms controlling the position of the division plane. Studies performed in prokaryotic and eukaryotic systems have revealed that various signal-emitting spatial cues - mitotic spindle, nucleus, nucleoid or cell tips - can favour or inhibit the assembly of the cytokinetic apparatus in their vicinity. Most often, several mechanisms operate in parallel to integrate spatial information and promote faithful genome segregation as well as proper cytoplasmic division. We primarily describe the spatial regulatory mechanisms operating in the fission yeast model system, where a detailed molecular understanding of cytokinesis has been achieved. In this system, spatial regulations target a major factor controlling the position of the division plane, the anillin-like protein Mid1. These mechanisms are then compared to spatial regulatory mechanisms prevailing in animal cells and rod-shaped bacteria.},
  author = {Almonacid, Maria and Paoletti, Anne},
@@ -1584,6 +1598,24 @@ DOI: [http://dx.doi.org/10.7554/eLife.01433.002][1]
  title = {Actin cortex mechanics and cellular morphogenesis},
  volume = {22},
  year = {2012},
+}
+
+@article{Schafer2004,
+ author = {Schafer, Dorothy A},
+ doi = {10.1038/430734a},
+ issn = {1476-4687},
+ journal = {Nature},
+ keyword = {Actins,Actins: metabolism,Cytoskeleton,Cytoskeleton: metabolism,Models, Biological,Pseudopodia,Pseudopodia: physiology},
+ language = {en},
+ link = {http://www.nature.com.rproxy.sc.univ-paris-diderot.fr/nature/journal/v430/n7001/full/430734a.html},
+ month = {aug},
+ number = {7001},
+ pages = {734--5},
+ pmid = {15306794},
+ publisher = {Nature Publishing Group},
+ title = {Cell biology: barbed ends rule.},
+ volume = {430},
+ year = {2004},
 }
 
 @article{Schafer2013,
