--- a/library.bib
+++ b/library.bib
@@ -316,6 +316,23 @@ DOI: [http://dx.doi.org/10.7554/eLife.01433.002][1]
  year = {2013},
 }
 
+@article{Carvalho2013a,
+ abstract = {Cells use complex biochemical pathways to drive shape changes for polarization and movement. One of these pathways is the self-assembly of actin filaments and myosin motors that together produce the forces and tensions that drive cell shape changes. Whereas the role of actin and myosin motors in cell polarization is clear, the exact mechanism of how the cortex, a thin shell of actin that is underneath the plasma membrane, can drive cell shape changes is still an open question. Here, we address this issue using biomimetic systems: the actin cortex is reconstituted on liposome membranes, in an 'outside geometry'. The actin shell is either grown from an activator of actin polymerization immobilized at the membrane by a biotin-streptavidin link, or built by simple adsorption of biotinylated actin filaments to the membrane, in the presence or absence of myosin motors. We show that tension in the actin network can be induced either by active actin polymerization on the membrane via the Arp2/3 complex or by myosin II filament pulling activity. Symmetry breaking and spontaneous polarization occur above a critical tension that opens up a crack in the actin shell. We show that this critical tension is reached by growing branched networks, nucleated by the Arp2/3 complex, in a concentration window of capping protein that limits actin filament growth and by a sufficient number of motors that pull on actin filaments. Our study provides the groundwork to understanding the physical mechanisms at work during polarization prior to cell shape modifications.},
+ author = {Carvalho, Kevin and Lemi\`{e}re, Jo\"{e}l and Faqir, Fahima and Manzi, John and Blanchoin, Laurent and Plastino, Julie and Betz, Timo and Sykes, C\'{e}cile},
+ doi = {10.1098/rstb.2013.0005},
+ issn = {1471-2970},
+ journal = {Philosophical transactions of the Royal Society of London. Series B, Biological sciences},
+ keyword = {Actin-Related Protein 2-3 Complex,Actin-Related Protein 2-3 Complex: metabolism,Actins,Actins: metabolism,Biological,Biomechanical Phenomena,Biomechanical Phenomena: physiology,Biomimetics,Biotin,Cell Movement,Cell Movement: physiology,Cell Polarity,Cell Polarity: physiology,Cell Shape,Cell Shape: physiology,Humans,Liposomes,Liposomes: metabolism,Models,Myosin Type II,Myosin Type II: metabolism,Polymerization,Profilins,Profilins: metabolism,Streptavidin},
+ link = {http://www.ncbi.nlm.nih.gov/pubmed/24062578},
+ month = {jan},
+ number = {1629},
+ pages = {20130005},
+ pmid = {24062578},
+ title = {Actin polymerization or myosin contraction: two ways to build up cortical tension for symmetry breaking.},
+ volume = {368},
+ year = {2013},
+}
+
 @article{Chaigne2013a,
  abstract = {At mitosis onset, cortical tension increases and cells round up, ensuring correct spindle morphogenesis and orientation. Thus, cortical tension sets up the geometric requirements of cell division. On the contrary, cortical tension decreases during meiotic divisions in mouse oocytes, a puzzling observation because oocytes are round cells, stable in shape, that actively position their spindles. We investigated the pathway leading to reduction in cortical tension and its significance for spindle positioning. We document a previously uncharacterized Arp2/3-dependent thickening of the cortical F-actin essential for first meiotic spindle migration to the cortex. Using micropipette aspiration, we show that cortical tension decreases during meiosis I, resulting from myosin-II exclusion from the cortex, and that cortical F-actin thickening promotes cortical plasticity. These events soften and relax the cortex. They are triggered by the Mos-MAPK pathway and coordinated temporally. Artificial cortex stiffening and theoretical modelling demonstrate that a soft cortex is essential for meiotic spindle positioning.},
  author = {Chaigne, Agathe and Campillo, Cl\'{e}ment and Gov, Nir S and Voituriez, Rapha\"{e}l and Azoury, Jessica and Uma\~{n}a-Diaz, Claudia and Almonacid, Maria and Queguiner, Isabelle and Nassoy, Pierre and Sykes, C\'{e}cile and Verlhac, Marie-H\'{e}l\`{e}ne and Terret, Marie-Emilie},
@@ -1166,6 +1183,23 @@ DOI: [http://dx.doi.org/10.7554/eLife.01433.002][1]
  journal = {Proceedings of the National Academy of Sciences of the United States of America},
  keyword = {Animals,Biophysical Phenomena,Cell Adhesion,Cell Adhesion: physiology,Cell Line,Cellular,Cellular: physiology,Elasticity,Elasticity: physiology,Extracellular Matrix,Extracellular Matrix: physiology,Fibronectins,Fibronectins: physiology,Mechanical,Mechanotransduction,Mice,Muscle Fibers,Signal Transduction,Signal Transduction: physiology,Skeletal,Skeletal: physiology,Static Electricity,Stress},
  link = {http://www.pubmedcentral.nih.gov/articlerender.fcgi?artid=2944728\&tool=pmcentrez\&rendertype=abstract},
+ month = {sep},
+ number = {38},
+ pages = {16518--23},
+ pmid = {20823257},
+ title = {Real-time single-cell response to stiffness.},
+ volume = {107},
+ year = {2010},
+}
+
+@article{Mitrossilis2010a,
+ abstract = {Living cells adapt to the stiffness of their environment. However, cell response to stiffness is mainly thought to be initiated by the deformation of adhesion complexes under applied force. In order to determine whether cell response was triggered by stiffness or force, we have developed a unique method allowing us to tune, in real time, the effective stiffness experienced by a single living cell in a uniaxial traction geometry. In these conditions, the rate of traction force buildup dF/dt was adapted to stiffness in less than 0.1 s. This integrated fast response was unambiguously triggered by stiffness, and not by force. It suggests that early cell response could be mechanical in nature. In fact, local force-dependent signaling through adhesion complexes could be triggered and coordinated by the instantaneous cell-scale adaptation of dF/dt to stiffness. Remarkably, the effective stiffness method presented here can be implemented on any mechanical setup. Thus, beyond single-cell mechanosensing, this method should be useful to determine the role of rigidity in many fundamental phenomena such as morphogenesis and development.},
+ author = {Mitrossilis, D\'{e}mosth\`{e}ne and Fouchard, Jonathan and Pereira, David and Postic, Fran\c{c}ois and Richert, Alain and Saint-Jean, Michel and Asnacios, Atef},
+ doi = {10.1073/pnas.1007940107},
+ issn = {1091-6490},
+ journal = {Proceedings of the National Academy of Sciences of the United States of America},
+ keyword = {Animals,Biophysical Phenomena,Cell Adhesion,Cell Adhesion: physiology,Cell Line,Elasticity,Elasticity: physiology,Extracellular Matrix,Extracellular Matrix: physiology,Fibronectins,Fibronectins: physiology,Mechanotransduction, Cellular,Mechanotransduction, Cellular: physiology,Mice,Muscle Fibers, Skeletal,Muscle Fibers, Skeletal: physiology,Signal Transduction,Signal Transduction: physiology,Static Electricity,Stress, Mechanical},
+ link = {http://www.pnas.org/content/early/2010/08/30/1007940107.abstract},
  month = {sep},
  number = {38},
  pages = {16518--23},
